わかばのプロフィールを追加。

--- a/member.html
+++ b/member.html
@@ -40,8 +40,10 @@
     </div>
     <div class="row">
       <div class="col harf">
-        <h2>Research Student</h2>
+        <h2>わかばちゃん</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
+        <p>真央ゼミの新入生。</p>
+        <p>一言：「よろしく！」</p>
       </div>
     </div>
 
